fix 'min-height: stretch' breaks layout in Firefox

--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,11 @@
 
 html {
   height: 100vh;
-  height: stretch;
   height: -webkit-fill-available;
 }
 
 body {
   min-height: 100vh;
-  min-height: stretch;
   min-height: -webkit-fill-available;
 
   display: flex;
